# zen-bridge

./: .editorconfig  .gitignore  .pre-commit-config.yaml  404.html  ARCHITECTURE.md  CHANGELOG.md  COMMAND_DEVELOPMENT_GUIDE.md  CONTRIBUTING.md  Claude.md  DOCS_README.md  EXAMPLES.md  IDEAS.md  LICENSE  MIGRATION.md  Makefile  PHASE_0-2_SUMMARY.md  PROTOCOL.md  README.md  REFACTOR_PLAN.md  RENAMING_SUMMARY.md  SECURITY.md  SUMMARY.md  UPDATE_REMOTE.sh  WEBSOCKET_MIGRATION.md  ZEN_CLI_COMMANDS.md  ZEN_CLI_REFACTORING_PLAN.md  ZEN_CLI_STRUCTURE.md  ZEN_CLI_SUMMARY.txt  analyze_images.js  capture_console.js  check_interactive.js  config.json  coverage.xml  diagnose_images.js  index.html  km_js_bridge.py  mkdocs.yml  package-lock.json  pyproject.toml  requirements.txt  (+10 more)
.github/workflows/: ci.yml  docs.yml
ADDING_TILES/: index.html
about/changelog/: index.html
about/license/: index.html
api/commands/: index.html
api/http-api/: index.html
api/models/: index.html
api/protocol/: index.html
api/services/: index.html
archive/: ZEN_CLI_ANALYSIS_INDEX.md  ZEN_CLI_COMMANDS.md  ZEN_CLI_REFACTORING_PLAN.md  ZEN_CLI_STRUCTURE.md
assets/images/: index.html
caching/: index.html
commands/do/: index.html
development/architecture/: index.html
development/contributing/: index.html
development/security/: index.html
development/testing/: index.html
docs/: ADDING_TILES.md  caching.md  index.md  troubleshooting.md  url-scheme-protocol.md  url-scheme-quick-start.md  url-scheme.md
docs/about/: changelog.md  license.md
docs/api/: commands.md  http-api.md  models.md  protocol.md  services.md
docs/commands/: do.md
docs/development/: architecture.md  contributing.md  security.md  testing.md
docs/getting-started/: configuration.md  installation.md  quick-start.md  updating.md
docs/guide/: advanced.md  ai-features.md  basic-commands.md  cli-vs-api.md  control-mode.md  data-extraction.md  element-interaction.md  javascript-execution.md  overview.md
docs/troubleshooting/: csp-issues.md
extensions/: README.md  SECURITY_FEATURES.md  index.html
extensions/SECURITY_FEATURES/: index.html
extensions/chrome/: CHROME_WEB_STORE.md  MODULAR_REFACTORING.md  README.md  background.js  build.sh  content.js  devtools.html  devtools.js  element_picker.js  index.html  manifest.json  offscreen.html  offscreen.js  panel.css  panel.html  panel.js  panel.js.backup  permissions.js
extensions/firefox/: INSTALL.md  README.md  background.js  build.sh  content.js  index.html  manifest.json  permissions.js
getting-started/configuration/: index.html
getting-started/installation/: index.html
getting-started/quick-start/: index.html
getting-started/updating/: index.html
guide/advanced/: index.html
guide/ai-features/: index.html
guide/basic-commands/: index.html
guide/cli-vs-api/: index.html
guide/control-mode/: index.html
guide/data-extraction/: index.html
guide/element-interaction/: index.html
guide/javascript-execution/: index.html
guide/overview/: index.html
inspekt/: __init__.py  bridge_ws.py  cli.py  client.py  config.py
inspekt/adapters/: filesystem.py
inspekt/i18n/: README.md  common_actions.json  filler_words.json
inspekt/scripts/: control.js  cookies.js  extract_actionable_elements.js  extract_article.js  extract_links.js  extract_page_structure.js  find_downloads.js  get_selection.js  highlight_selector.js  index_page.js  screenshot_element.js  sessionStorage.js  storage_unified.js  watch_all.js
inspekt/services/: action_cache.py  action_matcher.py  ai_integration.py  bridge_executor.py  content_cache.py  navigation_service.py  script_loader.py
prompts/: describe.prompt  do.prompt  summary.prompt
search/: search_index.json
tests/: __init__.py  conftest.py  test_smoke.py
tests/e2e/: __init__.py  test_browser_integration.py
tests/integration/: __init__.py  test_cli_integration.py  test_storage_unified.py  test_type_paste_commands.py
tests/unit/: __init__.py  (+5 more)
troubleshooting/: index.html
url-scheme/: index.html
url-scheme-protocol/: index.html
url-scheme-quick-start/: index.html
url_handler/: README.md  inspekt_url_handler.py  install.sh  test_links.html
zen/: __init__.py  bridge.py  bridge_ws.py  cli.py  client.py  config.py
(+127 files in other folders)
